src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Downloaded_Info_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Downloaded Info Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Educational_Institutions_Supported__c</fullName>
        <label>Educational Institutions Supported</label>
        <picklist>
            <picklistValues>
                <fullName>Dartmouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oberlin College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princeton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Texas - El Paso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Utah</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Engagement_Strategy__c</fullName>
        <inlineHelpText>Multi-year strategy designed to encourage prospect to meet Aspirational Goal</inlineHelpText>
        <label>Engagement Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <formula>Solicitation_Amount__c * Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Solicitation Amount x Probability = Expected Amount</inlineHelpText>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <inlineHelpText>When do you expect this gift to arrive?</inlineHelpText>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Reach_of_Campaign__c</fullName>
        <label>Expected Reach of Campaign(# of people)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_Education_and_Outreach__c</fullName>
        <label>Experience in Education and Outreach</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Gift_Date__c</fullName>
        <inlineHelpText>Date of the prospect&apos;s first commitment to Rare.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <description>This field auto-populates from Amount on Funding Detail</description>
        <inlineHelpText>This field auto-populates from Amount on Funding Detail</inlineHelpText>
        <label>Funding Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Opportunity__c</fullName>
        <inlineHelpText>The board-approved project, program or initiative that the prospect is being asked to or is likely to fund.</inlineHelpText>
        <label>Gift Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>ARAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs - Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs - Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs - Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs - Panama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Adaptation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Indonesia Prototypes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Philippines Prototypes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livelihoods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronesia 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phils-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Agriculture</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Has_BA_degree__c</fullName>
        <label>Has BA degree?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Ideal_Campaign_Manager__c</fullName>
        <label>Has Ideal Campaign Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_Priority_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box should be checked if they have a high giving potential and need to be followed closely.</description>
        <label>High Priority Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Address_2_Country__c</fullName>
        <label>Secondary Address Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Address_2_State_or_Province__c</fullName>
        <label>Secondary Address State or Province</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated States of Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marshall Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Address_Country__c</fullName>
        <label>Primary Address Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Address_State_or_Province__c</fullName>
        <label>Primary Address State or Province</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated States of Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marshall Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Learn_about_Rare_Rare_Pride__c</fullName>
        <description>to replace MVP field once Forms are live</description>
        <label>How Did You Learn about Rare/Rare Pride</label>
        <picklist>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pride Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_they_learned_about_Rare_Rare_Pride__c</fullName>
        <label>How they learned about Rare/Rare Pride</label>
        <picklist>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pride Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_would_Pride_address_those_threats__c</fullName>
        <label>How would Pride address those threats?</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_would_Pride_fit_into_this_strategy__c</fullName>
        <label>How would Pride fit into this strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_no_where_does_CM_work__c</fullName>
        <description>The organization where the CM works if they don&apos;t work for the Lead Agency.</description>
        <label>If no, where does CM work?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_other_please_explain__c</fullName>
        <label>If other, please explain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify__c</fullName>
        <label>If other, please specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this planned solicitation be included in the Rare FY forecast?</inlineHelpText>
        <label>Include in Forecast?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rating__c</fullName>
        <label>Interest (1-5)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_individual_and_employee_of_org__c</fullName>
        <label>Is individual and employee of org?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_of_Interest_Details__c</fullName>
        <label>Issue of Interest Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issues_of_Interest__c</fullName>
        <label>Issues of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Pollution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mammals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coral Reefs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deforestation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Entrepreneurship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahasa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Largest_Gift_Date__c</fullName>
        <inlineHelpText>Date of the prospect&apos;s largest commitment to Rare.</inlineHelpText>
        <label>Largest Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Largest_Gift__c</fullName>
        <inlineHelpText>The prospect’s largest commitment to Rare</inlineHelpText>
        <label>Largest Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Action_Date__c</fullName>
        <inlineHelpText>When was the last step taken with this prospect?</inlineHelpText>
        <label>Last Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Action__c</fullName>
        <inlineHelpText>What was the last step taken in the solicitation of this prospect?</inlineHelpText>
        <label>Last Action</label>
        <picklist>
            <picklistValues>
                <fullName>Sent Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Followed up on Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Acknowledgment</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Gift_Date__c</fullName>
        <inlineHelpText>Date of the prospect&apos;s most recent gift to Rare.</inlineHelpText>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Gift__c</fullName>
        <inlineHelpText>Amount of prospect&apos;s most recent gift to Rare</inlineHelpText>
        <label>Last Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Link_Rating__c</fullName>
        <label>Link (1-5)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Type__c</fullName>
        <label>Mailing Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Organization_Budget_USD__c</fullName>
        <label>Most Recent Organization Budget ($USD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moves_Manager_PTS__c</fullName>
        <inlineHelpText>The development staffer responsible for managing the prospect’s relationship to Rare, including the solicitation.</inlineHelpText>
        <label>Moves Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Alissa Moen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Bartlett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Britta Garfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia Mayoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Coppenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerald Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanette Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiakai Yuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Chase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kate Dixon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lisa Pharoah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcia Cota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martha Piper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paolo Domondon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peck Gee Chua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robin Heller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarah Schwimmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila Dennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybil Greenhalgh</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>